mechanism of showing tooltip, bug going behind table 2

--- a/app/assets/stylesheets/_elements/_tables.css.scss
+++ b/app/assets/stylesheets/_elements/_tables.css.scss
@@ -20,10 +20,10 @@ table {
 			position: absolute;
 			background-color: $black;
 			color: $white;
-			bottom: 100%;
+			//bottom: 100%;
 			padding: 0.125em 0.375em;
 			border-radius: 0.25em;
-			height: 100%;
+			//height: 100%;
 		}
 	}
 
